--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <!-- <img style= "opacity: 0.5;"src="asset/image/flower.png" alt="flower"> -->
             <h1 data-aos="fade-down" data-aos-duration="3000">Welcome to</h1>
             <h3 data-aos="fade-down" data-aos-duration="3000">The Wedding Celebration of</h3>
+            <h2 data-aos="fade-down" data-aos-duration="3000">Juni 26, 2021</h2>
             <div class="nama-nganten">
                 <div class="nganten" data-aos="fade-right" data-aos-duration="3000">
                     <h4>Zolanda</h4>
@@ -65,7 +66,7 @@
                     </div>
                     <!-- <h5 data-aos="fade-right" data-aos-duration="2000">Zolanda & Radhika<h5>
                         <h5 data-aos="fade-right" data-aos-duration="2000">Iqlima & Maulana<h5></h5> -->
-                    <h2 >Juni 26, 2021</h2>
+                    
                 </div>
             </div>
         </div>
@@ -401,3 +402,4 @@
     <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
+y
