--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <!-- <img style= "opacity: 0.5;"src="asset/image/flower.png" alt="flower"> -->
             <h1 data-aos="fade-down" data-aos-duration="3000">Welcome to</h1>
             <h3 data-aos="fade-down" data-aos-duration="3000">The Wedding Celebration of</h3>
-            <h2 data-aos="fade-down" data-aos-duration="3000">Juni 26, 2021</h2>
             <div class="nama-nganten">
                 <div class="nganten" data-aos="fade-right" data-aos-duration="3000">
                     <h4>Zolanda</h4>
@@ -38,6 +37,7 @@
                     <h4>Maulana</h4>
                 </div>
             </div>
+             <h2 data-aos="fade-down" data-aos-duration="3000">Juni 26, 2021</h2>
             <a href="#" onclick="toggle(), playing()"  data-aos="zoom-in" data-aos-duration="3000"><i class="fas fa-heart"></i> Open Invitation</a>
         </div>
     </div>
@@ -52,13 +52,13 @@
                 <div class="content-top">
                     <h2 data-aos="fade-down" data-aos-duration="2000">WE ARE GETTING MARRIED</h2>
                     <div class="nama-nganten">
-                        <div class="nganten" data-aos="zoom-in" data-aos-duration="3000">
+                        <div class="nganten”>
                             <h4>Zolanda</h4>
                             <h4>&</h4>
                             <h4>Radhika</h4>
                         </div>
-                        <div class="sabtu" data-aos="fade-down" data-aos-duration="3000"></div> 
-                        <div class="nganten" data-aos="zoom-in" data-aos-duration="3000">
+                        <div class="sabtu"></div> 
+                        <div class="nganten">
                             <h4>Iqlima</h4>
                             <h4>&</h4>
                             <h4>Maulana</h4>
