--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <h1 data-aos="fade-down" data-aos-duration="3000">Welcome to</h1>
             <h3 data-aos="fade-down" data-aos-duration="3000">The Wedding Celebration of</h3>
             <div class="nama-nganten">
-                <div class="nganten" data-aos="fade-right" data-aos-duration="3000">
+                <div class="nganten">
                     <h4>Zolanda</h4>
                     <h4>&</h4>
                     <h4>Radhika</h4>
                 </div>
-                <div class="sabtu" data-aos="fade-down" data-aos-duration="3000"></div> 
-                <div class="nganten" data-aos="fade-right" data-aos-duration="3000">
+                <div class="sabtu"></div> 
+                <div class="nganten">
                     <h4>Iqlima</h4>
                     <h4>&</h4>
                     <h4>Maulana</h4>
                 </div>
             </div>
-             <h2 data-aos="fade-down" data-aos-duration="3000">Juni 26, 2021</h2>
+            <h2 data-aos="fade-down" data-aos-duration="3000">26 Juni 2021</h2>
             <a href="#" onclick="toggle(), playing()"  data-aos="zoom-in" data-aos-duration="3000"><i class="fas fa-heart"></i> Open Invitation</a>
         </div>
     </div>
