--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="content-top">
                     <h2 data-aos="fade-down" data-aos-duration="2000">WE ARE GETTING MARRIED</h2>
                     <div class="nama-nganten">
-                        <div class="nganten”>
+                        <div class="nganten">
                             <h4>Zolanda</h4>
                             <h4>&</h4>
                             <h4>Radhika</h4>
