--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <h1 data-aos="fade-down" data-aos-duration="3000">Welcome to</h1>
             <h3 data-aos="fade-down" data-aos-duration="3000">The Wedding Celebration of</h3>
             <div class="nama-nganten">
-                <div class="nganten" "zoom-out" data-aos-duration="3000">
+                <div class="nganten" data-aos="zoom-out" data-aos-duration="3000">
                     <h4>Zolanda</h4>
                     <h4>&</h4>
                     <h4>Radhika</h4>
                 </div>
-                <div class="sabtu" "fade-down" data-aos-duration="3000"></div> 
-                <div class="nganten" "zoom-out" data-aos-duration="3000">
+                <div class="sabtu" data-aos="fade-down" data-aos-duration="3000"></div> 
+                <div class="nganten" data-aos="zoom-out" data-aos-duration="3000">
                     <h4>Iqlima</h4>
                     <h4>&</h4>
                     <h4>Maulana</h4>
