--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <p>The 1st Bride</p>
                 <!-- <img src="asset/image/maya.png" alt=""> -->
                 <span>Zolanda Rokhifatul Imayyah</span>
-                Putri dari Bpk. Moch. Pahala Spd.I dan Ibu Wiwin Fitriyani
+                Putri dari Bpk. H. Moch. Pahala Spd.I dan Ibu Wiwin Fitriyani
                 <!-- <a href="https://instagram.com/himayafarah" target="_blank" style="color: #917252; text-decoration: none; font-size: 40px;"><img src="asset/image/ig.png" alt="instagram"></a> -->
                 <br><br>
                 <p>The 1st Groom</p>
@@ -273,7 +273,7 @@
         </div>  
     </div>
 
-    <div class="hadiah">
+  <!—-  <div class="hadiah">
         <div class="ucapan-hadiah" data-aos="fade-up" data-aos-duration="2000">
             <h1>Kirim Hadiah</h1>
             <p>Kami mengucapkan terima kasih kepada Bapak/Ibu/Kerabat & Sahabat yang telah berkenan mengirimkan
@@ -298,7 +298,7 @@
             </div>
 
         </div>
-    </div>
+    </div> —->
 
     <div class="slideshow-container">
         <div class="mySlides fade">
