--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <p>The 2nd Bride</p>
                 <!-- <img src="asset/image/ilyas.png" alt=""> -->
                 <span>Iqlima Wilda Faqiha</span>
-                Putri dari Bpk. Moch. Pahala Spd.I dan Ibu Wiwin Fitriyani
+                Putri dari Bpk. H. Moch. Pahala Spd.I dan Ibu Wiwin Fitriyani
                 <!-- <a href="https://instagram.com/rikasilyas" target="_blank" style="color: #917252; text-decoration: none; font-size: 40px;"><img src="asset/image/ig.png" alt="instagram"></a> -->
                 <br><br>
                 <p>The 2nd Groom</p>
