zolanda radhika iqlima maulana

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>  
     </div>
 
-  <!—-  <div class="hadiah">
+    <!-- <div class="hadiah">
         <div class="ucapan-hadiah" data-aos="fade-up" data-aos-duration="2000">
             <h1>Kirim Hadiah</h1>
             <p>Kami mengucapkan terima kasih kepada Bapak/Ibu/Kerabat & Sahabat yang telah berkenan mengirimkan
@@ -298,7 +298,7 @@
             </div>
 
         </div>
-    </div> —->
+    </div>  -->
 
     <div class="slideshow-container">
         <div class="mySlides fade">
