--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <img src="asset/image/Party.png" alt="">
                 <p>Resepsi</p>
                 <p>• • • • • • • • • • • • • • • • • • • • </p>
-                Minggu, 26 Juni 2021 <br>
+                Sabtu, 26 Juni 2021 <br>
                 10:00 s/d 11:00
                 <span>Pondok Wali Barokah Kediri</span>
                 Jl. H.O.S Cokro Aminoto No 195, Burengan, Pesantren, Kediri
