--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <img src="asset/image/atas.png" alt="">
         </div> -->
         <h2>Wishes For Us</h2>
-        <p>Tinggalkan do'a/pesan/harapan untuk Himaya & Ilyas</p>
+        <p>Tinggalkan do'a/pesan/harapan untuk Zolanda - Radhika & Iqlima - Maulana </p>
         <a href="#newcomment">
             <button> 💌 Tuliskan Pesan..</button>
         </a>
